manifests/deployment-1.yml
apiVersion : apps/v1beta1
kind: Deployment
metadata:
  name: "kubernetes"
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: "kubernetes"
    spec:
      containers:
        - name: "kubernetes"
          image: "cloudregistry1.azurecr.io/kubernetes"
          ports:
          - containerPort: 8050
