manifests/service-1.yml
apiVersion: v1
kind: Service
metadata:
    name: "kubernetes"
    labels:
        app: "kubernetes"
spec:
    type: ClusterIP
    ports:
    - port: 8050
      targetPort: 8050
      protocol: TCP
      name: http
    selector:
        app: "kubernetes"
