manifests/service-2.yml
apiVersion: v1
kind: Service
metadata:
    name: "kcluster"
    labels:
        app: "kcluster"
spec:
    type: LoadBalancer
    ports:
    - port: 8050
      targetPort: http
      protocol: TCP
      name: http
    selector:
        app: "kcluster"
