manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "main"
    labels:
        app: "main"
spec:
    type: LoadBalancer
    ports:
    - port: 8050
      targetPort: http
      protocol: TCP
      name: http
    selector:
        app: "main"
